added error codes/checking
