# routes/property.js
@@ -3,8 +3,13 @@ let router = express.Router();
 const gateway = require("../gateways/propertydb");
 const utilities = require("../misc/utilities");
 const accessControl = require("../misc/accessControl");
+const validateInputs = require("../misc/validateInputs");
+var bodyParser = require('body-parser');
+const { validateAPIKey } = require('../misc/accessControl');
+
 const logger = utilities.getLogger();
 
+var jsonParser = bodyParser.json()
 
 // I like to log who is calling the web services
 router.use(function (req, res, next) {
@@ -28,7 +33,11 @@ router.post('/',
         if(accessControl.validateAPIKey(request) == false){
             logger.info("error");  
             utilities.sendResponse(response, 401, "Invalid API key"); 
-        }else{
+        }
+        else if (validateInputs.validatePost(request, response) == false){
+            console.log("POST Request Failed.");
+        }
+        else{
             const result = await gateway.insert(request);
             logger.info("success");
             utilities.sendResponse(response, 200, "Inserted property Id: " + result); 
@@ -39,41 +48,67 @@ router.post('/',
 
 router.get('/:propertyId',
   async function(request, response) {
-        const result = await gateway.fetchProperty(request);
-        logger.info("success");
-        utilities.sendResponse(response, 200,result);
+        try{
+            const result = await gateway.fetchProperty(request);
+            logger.info("success");
+            utilities.sendResponse(response, 200,result);
+        }
+        catch(error){
+            logger.info("error");
+            utilities.sendResponse(response, 404, "Retrieving an invalid property.");
+        }
     }
 );
 
 router.delete('/:propertyId',
   async function(request, response) {
-
+        //console.log(request.params)
         if(accessControl.validateAPIKey(request) == false){
             logger.info("error");  
             utilities.sendResponse(response, 401, "Invalid API key"); 
         }
         else{
-            const result = await gateway.delete(request);
-            logger.info("success");
-            utilities.sendResponse(response, 200, "Deleted property: " + result);
+            try{
+                const result = await gateway.delete(request);
+                logger.info("success");
+                utilities.sendResponse(response, 200, "Deleted property: " + result);
+            }
+            catch(error){
+                logger.info("error");
+                utilities.sendResponse(response, 404,"Deleting an invalid property.");
+            }
+            
         }
         
     }
 );
 
 router.put('/:propertyId',
+  jsonParser,
   async function(request, response) {
         //get propertyId from the path
-        //let id = request.params.propertyId;
+
 
         if(accessControl.validateAPIKey(request) == false){
             logger.info("error");  
             utilities.sendResponse(response, 401, "Invalid API key"); 
         }
         else{
-            const result = await gateway.update(request);
-            logger.info("success");
-            utilities.sendResponse(response, 200, "Updated property: " + result);
+            let columnsToBeUpdated = {};
+            // get all parameters in request.body and add to map 
+            for (const [key, value] of Object.entries(request.body)) {
+                //console.log(key, value);
+                columnsToBeUpdated[key] = value;
+            }		    
+
+            if (validateInputs.validatePut(columnsToBeUpdated, request, response) == false){
+                console.log("PUT Request Failed.");
+            }
+            else{
+                const result = await gateway.update(columnsToBeUpdated, request);
+                logger.info("success");
+                utilities.sendResponse(response, 200, "Updated property: " + result);
+            }
         }
     }
 );
